--- a/DiscordBotHandler/DiscordBotHandler.csproj
+++ b/DiscordBotHandler/DiscordBotHandler.csproj
@@ -20,6 +20,10 @@
     <Compile Include="Services\Crypto.cs" />
     <Compile Include="Services\DotaAssistans.cs" />
     <Compile Include="Services\DotaImageDraw.cs" />
+    <Compile Include="Services\HeroImageProvider.cs" />
+    <Compile Include="Services\ImageStorageItem.cs" />
+    <Compile Include="Services\ImageStorageHero.cs" />
+    <Compile Include="Services\ItemImageProvider.cs" />
     <Compile Include="Services\Logger.cs" />
     <Compile Include="Services\Player.cs" />
     <Compile Include="Services\VerificateCommand.cs" />
@@ -57,7 +61,7 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="Connect.config">
-      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Update="map.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
