--- a/DiscordBotHandler.Test/DiscordBotHandler.Test.csproj
+++ b/DiscordBotHandler.Test/DiscordBotHandler.Test.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
   
   <ItemGroup>
+    <PackageReference Include="EntityFrameworkCoreMock.Moq" Version="2.3.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
