empty image fix

--- a/DiscordBotHandler/DiscordBotHandler.csproj
+++ b/DiscordBotHandler/DiscordBotHandler.csproj
@@ -73,6 +73,9 @@
     <None Update="map.png">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="unknown.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
