--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 *.userosscache
 *.sln.docstates
 
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
@@ -249,6 +250,8 @@ ServiceFabricBackup/
 
 # SQL Server files
 *.mdf
+*.mdf-shm
+*.mdf-wal
 *.ldf
 *.ndf
 
